--- a/polybar/.config/polybar/amarena/bars.ini
+++ b/polybar/.config/polybar/amarena/bars.ini
@@ -210,7 +210,7 @@ label-discharging = %percentage%%
 
 ; Available tokens:
 ;   %percentage% (default)
-label-full = " Full"
+label-full = "%{F#6CCB6E} Full %{F-}"
 
 ; Only applies if <bar-capacity> is used
 bar-capacity-width = 10
@@ -220,9 +220,9 @@ bar-capacity-indicator = ${bar.indicator}
 bar-capacity-indicator-foreground = ${color.foreground}
 
 bar-capacity-fill = ${bar.fill}
-bar-capacity-foreground-0 = ${color.foreground}
-bar-capacity-foreground-1 = ${color.foreground}
-bar-capacity-foreground-2 = ${color.foreground}
+bar-capacity-foreground-0 = ${color.color10}
+bar-capacity-foreground-1 = ${color.color10}
+bar-capacity-foreground-2 = ${color.color10}
 
 bar-capacity-empty = ${bar.empty}
 bar-capacity-empty-foreground = ${color.foreground}
