--- a/polybar/.config/polybar/amarena/colors.ini
+++ b/polybar/.config/polybar/amarena/colors.ini
@@ -10,6 +10,7 @@
 [color]
 foreground-alt = #8F8F8F
 module-fg = #1F1F1F
+; transparent background. Due to the aa at the start
 background=	#aa1A2026 
 foreground=	#FFFFFF
 cursorColor=	#FFFFFF
