--- a/polybar/.config/polybar/amarena/modules.ini
+++ b/polybar/.config/polybar/amarena/modules.ini
@@ -46,7 +46,7 @@ master-mixer = Master
 
 ; Interval for volume increase/decrease (in percent points)
 ; Default: 5
-interval = 5
+interval = 1
 
 ; Available tags:
 ;   <label-volume> (default)
@@ -59,7 +59,7 @@ format-volume = <ramp-volume> <label-volume>
 ;   <ramp-volume>
 ;   <bar-volume>
 format-muted = <label-muted>
-format-muted-prefix = 
+format-muted-prefix =%{F#FB6396} %{F-}
 
 ; Available tokens:
 ;   %percentage% (default)
@@ -71,9 +71,9 @@ label-muted = " Muted"
 label-muted-foreground = ${color.foreground-alt}
 
 ; Only applies if <ramp-volume> is used
-ramp-volume-0 = 
-ramp-volume-1 = 
-ramp-volume-2 = 
+ramp-volume-0 = %{F#F692B2}%{F-}
+ramp-volume-1 = %{F#94CF95}%{F-}
+ramp-volume-2 = %{F#FB6396}%{F-}
 
 ; If defined, it will replace <ramp-volume> when
 ; headphones are plugged in to `headphone_control_numid`
@@ -143,27 +143,28 @@ time-format = %H:%M
 ;   <bar-capacity>
 ;   <ramp-capacity>
 ;   <animation-charging>
-format-charging = <animation-charging> <label-charging>
+format-charging = %{T4}%{F#6EC1D6}<animation-charging>%{T-} <label-charging>%{F-}
 
 ; Available tags:
 ;   <label-discharging> (default)
 ;   <bar-capacity>
 ;   <ramp-capacity>
 ;   <animation-discharging>
-format-discharging = <ramp-capacity> <label-discharging>
+; format-discharging = <ramp-capacity> <label-discharging>
+format-discharging =%{F#CD84C8}<animation-discharging> <label-discharging> %{F-}
 
 ; Available tags:
 ;   <label-full> (default)
 ;   <bar-capacity>
 ;   <ramp-capacity>
 format-full = <label-full>
-format-full-prefix = 
-
+; format-full-prefix = %{F#6CCB6E} %{F-}
+format-full-prefix = %{F#6CCB6E} %{F-}
 ; Available tokens:
 ;   %percentage% (default)
 ;   %time%
 ;   %consumption% (shows current charge rate in watts)
-label-charging = %percentage%%
+label-charging = %percentage%% 
 
 ; Available tokens:
 ;   %percentage% (default)
@@ -173,7 +174,7 @@ label-discharging = %percentage%%
 
 ; Available tokens:
 ;   %percentage% (default)
-label-full = " Full"
+label-full = "%{F#6CCB6E}Full %{F-}"
 
 ; Only applies if <ramp-capacity> is used
 ramp-capacity-0 = 
@@ -191,18 +192,24 @@ ramp-capacity-9 = 
 ;bar-capacity-width = 10
 
 ; Only applies if <animation-charging> is used
-animation-charging-0 = 
-animation-charging-1 = 
+; Nerd font is used here. i.e font-2
+animation-charging-0 = ""
+animation-charging-1 = ""
+animation-charging-2 = ""
+animation-charging-3 = ""
 
 ; Framerate in milliseconds
 animation-charging-framerate = 750
 
 ; Only applies if <animation-discharging> is used
-;;animation-discharging-0 = ${battery.anim0}
-;;animation-discharging-1 = ${battery.anim1}
+animation-discharging-0 = 
+animation-discharging-1 = 
+animation-discharging-2 = 
+animation-discharging-3 = 
+animation-discharging-4 = 
 
 ; Framerate in milliseconds
-;animation-discharging-framerate = 500
+animation-discharging-framerate = 400
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -669,7 +676,7 @@ interval = 1
 ;   <icon-next>
 ;   <icon-seekb>
 ;   <icon-seekf>
-format-online = <label-song> <icon-prev> <toggle> <icon-next>
+format-online = <label-song> <icon-prev> <toggle> <icon-next> <bar-progress>
 format-online-prefix = 
 
 ;format-playing = ${self.format-online}
@@ -722,10 +729,10 @@ toggle-on-foreground = ${color.primary}
 toggle-off-foreground = ${color.secondary}
 
 ; Only applies if <bar-progress> is used
-;;bar-progress-width = 45
-;;bar-progress-indicator = |
-;;bar-progress-fill = ─
-;;bar-progress-empty = ─
+bar-progress-width = 15
+bar-progress-indicator = |
+bar-progress-fill = ─
+bar-progress-empty = ─
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -773,7 +780,7 @@ unknown-as-up = true
 ; Available tags:
 ;   <label-connected> (default)
 ;   <ramp-signal>
-format-connected = <ramp-signal> <label-connected>
+format-connected = %{F#CD84C8}<ramp-signal>%{F-} <label-connected>
 
 ; Available tags:
 ;   <label-disconnected> (default)
@@ -920,7 +927,7 @@ format-warn = <ramp> <label-warn>
 ;   %temperature% (deprecated)
 ;   %temperature-c%   (default, temperature in °C)
 ;   %temperature-f%   (temperature in °F)
-label = %temperature-c% %{F-}
+label = %temperature-c%%{F-}
 
 ; Available tokens:
 ;   %temperature% (deprecated)
