--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -48,7 +48,7 @@ monitor-strict = false
 
 ; Tell the Window Manager not to configure the window.
 ; Use this to detach the bar if your WM is locking its size/position.
-override-redirect = true
+override-redirect = false
 
 ; Put the bar at the bottom of the screen
 bottom = true
@@ -128,17 +128,19 @@ module-margin-right = 1
 ;   font-3 = FontAwesome:size=10
 ; See the Fonts wiki page for more details
 
-font-0 = "Fantasque Sans Mono:pixelsize=12;3"
-font-1 = "Material\-Design\-Iconic\-Font:size=13;4"
-font-2 ="FantasqueSansMono Nerd Font Mono:pxelsize=12;5"
+font-0 = "Fantasque Sans Mono:pixelsize=15;3"
+font-1 = "Material\-Design\-Iconic\-Font:size=15;4"
+font-2 ="FantasqueSansMono Nerd Font Mono:pixelsize=15;5"
+font-3 ="FantasqueSansMono Nerd Font Mono:size=22;5"
+
 ; Modules are added to one of the available blocks
 ;   modules-left = cpu ram
 ;   modules-center = xwindow xbacklight
 ;   modules-right = ipc clock
 
 modules-left = launcher i3 term files browser settings
-modules-center = mpd
-modules-right = keyboard updates alsa temperature battery network date sysmenu
+modules-center = mpd 
+modules-right = updates alsa temperature battery network date sysmenu
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
