--- a/kitty/.config/kitty/Amarena.conf
+++ b/kitty/.config/kitty/Amarena.conf
@@ -1,5 +1,7 @@
 background   	#1A2026
-foreground   	#FFFFFF
+# foreground   	#FFFFFF
+foreground   	#dcdcdc
+
 cursor          #FFFFFF
 color0   	    #242D35
 color1   	    #FB6396
@@ -17,3 +19,6 @@ color12     	#4CB9D6
 color13     	#C269BC
 color14     	#58D6BF
 color15     	#F4F5F2
+
+active_border_color #F692B2
+
