--- a/ncmpcpp/.config/ncmpcpp/config
+++ b/ncmpcpp/.config/ncmpcpp/config
@@ -1,3 +1,5 @@
+### Directories ###
+
 ncmpcpp_directory = ~/.ncmpcpp
 lyrics_directory = ~/.ncmpcpp/lyrics
 mpd_host = localhost
@@ -5,34 +7,54 @@ mpd_port = 6600
 mpd_connection_timeout = 5
 mpd_music_dir = "/mnt/shared/PERSONAL/Music"
 mpd_crossfade_time = 5
+
+### Visualizer ###
+
 visualizer_data_source = /tmp/mpd.fifo
 visualizer_output_name = mpd_fifo
 visualizer_in_stereo = yes
 visualizer_type = ellipse
-visualizer_look = ▮●
-visualizer_color = 41, 83, 119, 155, 185, 215, 209, 203, 197, 161
+# visualizer_look = ▮●
+visualizer_look=●●
+# visualizer_color = 41, 83, 119, 155, 185, 215, 209, 203, 197, 161
+
 system_encoding = "UTF-8"
-playlist_disable_highlight_delay = 5
-message_delay_time = 5
-song_list_format = {%a - }{%t}|{$8%f$9}$R{$3(%l)$9}
-song_status_format = {{%a{ "%b"{ (%y)}} - }{%t}}|{%f}
-song_library_format = {%n - }{%t}|{%f}
-alternative_header_first_line_format = $b$1$aqqu$/a$9 {%t}|{%f} $1$atqq$/a$9$/b
-alternative_header_second_line_format = {{$4$b%a$/b$9}{ - $7%b$9}{ ($4%y$9)}}|{%D}
-now_playing_prefix = $b
-now_playing_suffix = $/b
-song_window_title_format = {%a - }{%t}|{%f}
-browser_sort_mode = name
-browser_sort_format = {%a - }{%t}|{%f} {(%l)}
-song_columns_list_format = (20)[]{a} (6f)[green]{NE} (50)[white]{t|f:Title} (20)[cyan]{b} (7f)[magenta]{l}
+
+### Appearance ###
+
+colors_enabled = yes
+playlist_display_mode = columns
 playlist_show_mpd_host = no
 playlist_show_remaining_time = yes
 playlist_shorten_total_times = no
 playlist_separate_albums = no
-playlist_display_mode = columns
+playlist_disable_highlight_delay = 5
+playlist_editor_display_mode = classic
+
+# Song List #
+song_list_format = {%a - }{%t}|{$8%f$9}$R{$3(%l)$9}
+song_status_format = {{%a{ "%b"{ (%y)}} - }{%t}}|{%f}
+song_library_format = {%n - }{%t}|{%f}
+song_columns_list_format = (20)[]{a} (6f)[green]{NE} (50)[white]{t|f:Title} (20)[cyan]{b} (7f)[magenta]{l}
+
+now_playing_prefix = $b
+now_playing_suffix = $/b
+
+# Alternative UI #
+alternative_header_first_line_format = $b$1$aqqu$/a$9 {%t}|{%f} $1$atqq$/a$9$/b
+alternative_header_second_line_format = {{$4$b%a$/b$9}{ - $7%b$9}{ ($4%y$9)}}|{%D}
+
+# Window #
+song_window_title_format = {%a - }{%t}|{%f}
+header_visibility = yes
+statusbar_visibility = no
+titles_visibility = yes
+
+### Other stuff which I just copied from some blog ###
+browser_sort_mode = name
+browser_sort_format = {%a - }{%t}|{%f} {(%l)}
 browser_display_mode = classic
 search_engine_display_mode = classic
-playlist_editor_display_mode = classic
 incremental_seeking = yes
 seek_time = 1
 volume_change_step = 2
@@ -43,9 +65,6 @@ default_place_to_search_in = database
 user_interface = alternative
 media_library_primary_tag = genre
 default_find_mode = wrapped
-header_visibility = yes
-statusbar_visibility = yes
-titles_visibility = yes
 header_text_scrolling = yes
 cyclic_scrolling = yes
 lines_scrolled = 2
@@ -69,6 +88,9 @@ mouse_support = yes
 enable_window_title = yes
 external_editor = vim
 use_console_editor = yes
-colors_enabled = yes
+
+### Behaviour ###
+
+message_delay_time = 5
 execute_on_song_change = "/usr/bin/python3 ~/.local/bin/mpd_notify.py"
 
