--- a/polybar/.config/polybar/amarena/modules.ini
+++ b/polybar/.config/polybar/amarena/modules.ini
@@ -676,8 +676,8 @@ interval = 1
 ;   <icon-next>
 ;   <icon-seekb>
 ;   <icon-seekf>
-format-online = <label-song> <icon-prev> <toggle> <icon-next> <bar-progress>
-format-online-prefix = 
+format-online = <label-song> <icon-prev> <toggle> <icon-next> %{F#4CB9D6}<bar-progress>%{F-}
+format-online-prefix ="%{F#6CCB6E}%{F-} "
 
 ;format-playing = ${self.format-online}
 ;format-paused = ${self.format-online}
@@ -695,7 +695,7 @@ format-offline-prefix = 
 ;   %date%
 ;   %title%
 ; Default: %artist% - %title%
-label-song =  " %artist% - %title%"
+label-song =  %artist% - %title%
 label-song-maxlen = 25
 label-song-ellipsis = true
 
@@ -1002,93 +1002,6 @@ label-maxlen = 30
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
-;[module/i3]
-;type = internal/i3
-;label-font="Material\-Design\-Iconic\-Font:size=13;4"
-;format-font="Material\-Design\-Iconic\-Font:size=13;4"
-;; Only show workspaces defined on the same output as the bar
-;;
-;; Useful if you want to show monitor specific workspaces
-;; on different bars
-;;
-;; Default: false
-;pin-workspaces = true
-;show-urgent = true
-
-;; Create click handler used to focus desktop
-;; Default: true
-;enable-click = true
-
-;; Create scroll handlers used to cycle desktops
-;; Default: true
-;enable-scroll = true
-
-;; icon-[0-9]+ = <desktop-name>;<icon>
-;; NOTE: The desktop name needs to match the name configured by the WM
-;; You can get a list of the defined desktops using:
-;; $ xprop -root _NET_DESKTOP_NAMES
-;ws-icon-0 = 1;%{T2}%{T-}
-;ws-icon-1 = 2;
-;ws-icon-2 = 3;
-;ws-icon-3 = 4;
-;ws-icon-4 = 5;%{T2}%{T-}
-;; icon-0 = "\Ue400"
-;; icon-1 = "\Ue400"
-
-;ws-icon-default = 
-;; strip-wsnumbers = true
-;wrapping-scroll = false
-
-
-;; Available tags:
-;;   <label-monitor>
-;;   <label-state> - gets replaced with <label-(active|urgent|occupied|empty)>
-;; Default: <label-state>
-;; format = <label-state>
-;; format-padding = 0
-
-;; Available tokens:
-;;   %name%
-;; Default: %name%
-;; label-monitor = %name%
-
-;; Available tokens:
-;;   %name%
-;;   %icon%
-;;   %index%
-;; Default: %icon%  %name%
-;; label-active = %icon%
-;; label-active-foreground = ${color.primary}
-;; label-active-underline = ${color.primary}
-
-;; Available tokens:
-;;   %name%
-;;   %icon%
-;;   %index%
-;; Default: %icon%  %name%
-;label-occupied = %icon%
-;label-occupied-foreground = ${color.alternate}
-
-;; Available tokens:
-;;   %name%
-;;   %icon%
-;;   %index%
-;; Default: %icon%  %name%
-;; label-urgent = %icon%
-;; label-urgent-foreground = ${color.secondary}
-
-;; Available tokens:
-;;   %name%
-;;   %icon%
-;;   %index%
-;; Default: %icon%  %name%
-;; label-empty = %icon%
-
-;label-active-padding = 2
-;label-urgent-padding = 2
-;label-occupied-padding = 2
-;label-empty-padding = 2
-
 
 [module/i3]
 type = internal/i3
@@ -1099,7 +1012,7 @@ type = internal/i3
 ; on different bars
 ;
 ; Default: false
-pin-workspaces = true
+; pin-workspaces = true
 
 ; Show urgent workspaces regardless of whether the workspace is actually hidden 
 ; by pin-workspaces.
@@ -1172,7 +1085,7 @@ label-focused = %index%
 label-focused-foreground = ${color.foreground}
 label-focused-background = ${color.color8}
 label-focused-underline = ${color.primary}
-label-focused-padding = 4
+label-focused-padding = 1
 
 ; Available tokens:
 ;   %name%
@@ -1181,7 +1094,7 @@ label-focused-padding = 4
 ;   %output%
 ; Default: %icon% %name%
 label-unfocused = %index%
-label-unfocused-padding = 4
+label-unfocused-padding = 1
 
 ; Available tokens:
 ;   %name%
@@ -1191,7 +1104,7 @@ label-unfocused-padding = 4
 ; Default: %icon% %name%
 label-visible = %index%
 label-visible-underline = #555555
-label-visible-padding = 4
+label-visible-padding =0
 
 ; Available tokens:
 ;   %name%
@@ -1202,11 +1115,11 @@ label-visible-padding = 4
 label-urgent = %index%
 label-urgent-foreground = ${color.secondary} 
 label-urgent-background = ${color.color11}
-label-urgent-padding = 4
+label-urgent-padding = 2
 
 ; Separator in between workspaces
 label-separator = |
-label-separator-padding = 2
+label-separator-padding = 1
 label-separator-foreground = ${color.secondary}
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
