--- a/polybar/.config/polybar/amarena/user_modules.ini
+++ b/polybar/.config/polybar/amarena/user_modules.ini
@@ -186,7 +186,11 @@ label-separator = " | "
 ;;label-separator-foreground = ${color.background}
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
-
+; TODO: Comics 
+[module/comics]
+type = custom/text
+content = "%{T4}%{T-}"
+click-left = ~/.config/polybar/amarena/scripts/comics.sh
 [module/menu]
 type = custom/menu
 
