--- a/polybar/.config/polybar/config.ini
+++ b/polybar/.config/polybar/config.ini
@@ -138,7 +138,7 @@ font-3 ="FantasqueSansMono Nerd Font Mono:size=22;5"
 ;   modules-center = xwindow xbacklight
 ;   modules-right = ipc clock
 
-modules-left = launcher i3 term files browser settings
+modules-left = launcher i3 term files browser settings comics
 modules-center = mpd 
 modules-right = updates alsa temperature battery network date sysmenu
 
