--- a/kitty/.config/kitty/Amarena.conf
+++ b/kitty/.config/kitty/Amarena.conf
@@ -16,7 +16,7 @@ color9   	    #F92D72
 color10   	    #6CCB6E
 color11     	#F26190
 color12     	#4CB9D6
-color13     	#C269BC
+color13     	#c269bc
 color14     	#58D6BF
 color15     	#F4F5F2
 
