--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -317,7 +317,8 @@ client.background           #2f343f
 gaps inner 4
 gaps bottom 0
 # gaps bottom 40
-gaps top 2
+gaps top 0
+# gaps outer 0
 # Additionally, you can issue commands with the following syntax. This is useful to bind keys to changing the gap size.
 # gaps inner|outer current|all set|plus|minus <px>
 # gaps inner all set 10
