--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -80,11 +80,12 @@ exec_always --no-startup-id ff-theme-util
 exec_always --no-startup-id setcursor
 exec_always --no-startup-id ${HOME}/.config/polybar/launch.sh
 exec_always --no-startup-id numlockx on
+exec_always --no-startup-id eww kill;eww open bar
 exec blueberry-tray
 exec --no-startup-id java -Xmx1024m -jar "/opt/xdman/xdman.jar" -m
 # Hide the polybar window
 # exec --no-startup-id hideIt.sh -C '^Polybar$' --hover -d bottom
-exec --no-startup-id sleep 10 && hideIt.sh --name 'Polybar tray window' --region 1920x0+-100+100 -d top --interval 1
+exec_always --no-startup-id sleep 10 && hideIt.sh --name 'Polybar tray window' --region 1920x0+-100+100 -d top --interval 1
 # hide/unhide i3status bar
 # bindsym $super+m bar mode toggle
 # start rofi (a program launcher) change modus Ctrl + Tab
@@ -294,6 +295,8 @@ for_window [class="garuda-welcome"] floating enable
 
 # window rules, you can find the window class using xprop
 for_window [class=".*"] border pixel 4
+for_window [class="eww-calendar"] floating enable border pixel 0
+for_window [class="eww-dashboard"] floating enable border pixel 0
 assign [class=URxvt] 1
 for_window [class=Viewnior|feh|Audacious|File-roller|Lxappearance|Lxtask|Pavucontrol|upgrade2ultimate.sh] floating enable
 for_window [class=URxvt|firedragon|Geany|Evince|Soffice|libreoffice*|mpv|Ghb|Xfburn|Gimp*|Inkscape|Vlc|Lxappearance|Audacity] focus
@@ -383,5 +386,4 @@ mode "$mode_system" {
     # exit system mode: "Enter" or "Escape"
     bindsym Return mode "default"
     bindsym Escape mode "default"
-
 
