fixed mpd status

--- a/mpd/.config/mpd/mpd.conf
+++ b/mpd/.config/mpd/mpd.conf
@@ -124,7 +124,7 @@ restore_paused "yes"
 # This setting enables automatic update of MPD's database when files in 
 # music_directory are changed.
 #
-#auto_update	"yes"
+auto_update	"yes"
 #
 # Limit the depth of the directories being watched, 0 means only watch
 # the music directory itself.  There is no limit by default.
@@ -214,14 +214,14 @@ input {
 ##	mixer_index	"0"		# optional
 #}
 # pipewire output
-audio_output {
-    type        "pipewire"
-    name        "PipeWire Sound Server"
-}
 # audio_output {
-#         type            "pulse"
-#         name            "pulse audio"
+#     type        "pipewire"
+#     name        "PipeWire Sound Server"
 # }
+audio_output {
+        type            "pulse"
+        name            "pulse audio"
+}
 # audio output for visualising
 audio_output {
     type        "fifo"
