--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -22,13 +22,14 @@ include Amarena.conf
 #: heavy. Setting them manually is useful for font families that have
 #: many weight variants like Book, Medium, Thick, etc. For example::
 
-       font_family      FiraCode Nerd Font
+       # font_family      FiraCode Nerd Font
+       font_family      VictorMono Nerd Font
 #:     bold_font        Operator Mono Medium
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
 
-font_size 12.0
+font_size 14.0
 
 #: Font size (in pts)
 
