--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -100,7 +100,8 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: FantasqueSansMono Nerd Font Mono
+    # family: FantasqueSansMono Nerd Font Mono
+    family: DankMono Nerd Font Mono
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
@@ -111,7 +112,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: FantasqueSansMono Nerd Font Mono
+    family: DankMono Nerd Font Mono
 
     # The `style` can be specified to pick a specific face.
     #style: Bold
@@ -122,7 +123,7 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: FantasqueSansMono Nerd Font Mono
+    family: DankMono Nerd Font Mono 
 
     # The `style` can be specified to pick a specific face.
     #style: Italic
@@ -133,7 +134,7 @@ font:
     #
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: FantasqueSansMono Nerd Font Mono
+    family: DankMono Nerd Font Mono
 
     # The `style` can be specified to pick a specific face.
     #style: Bold Italic
