--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -101,7 +101,8 @@ font:
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
     # family: FantasqueSansMono Nerd Font Mono
-    family: DankMono Nerd Font Mono
+    family: Fisa Code
+    style: Light
 
     # The `style` can be specified to pick a specific face.
     #style: Regular
@@ -112,7 +113,8 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: DankMono Nerd Font Mono
+    family: Fisa Code
+    style: Bold
 
     # The `style` can be specified to pick a specific face.
     #style: Bold
@@ -123,7 +125,8 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: DankMono Nerd Font Mono 
+    family: Fisa Code
+    style: Italic
 
     # The `style` can be specified to pick a specific face.
     #style: Italic
@@ -134,7 +137,9 @@ font:
     #
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: DankMono Nerd Font Mono
+    family: Fisa Code
+    style: Bold Italic
+
 
     # The `style` can be specified to pick a specific face.
     #style: Bold Italic
