--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -3,7 +3,7 @@
 # include Nord.conf
 # include Sweetified.conf
 include Amarena.conf
-#: Fonts 
+#: Fonts
 
 #: kitty has very powerful font management. You can configure
 #: individual font faces and even specify special fonts for particular
@@ -23,10 +23,10 @@ include Amarena.conf
 #: many weight variants like Book, Medium, Thick, etc. For example::
 
        # font_family      FiraCode Nerd Font
-       font_family      VictorMono Nerd Font
-#:     bold_font        Operator Mono Medium
-#:     italic_font      Operator Mono Book Italic
-#:     bold_italic_font Operator Mono Medium Italic
+       font_family       Fisa Code Book Regular
+       bold_font         Fisa Code Bold
+       italic_font       Fisa Code Light Italic
+       bold_italic_font   Fisa Code Bold Italic
 
 
 font_size 14.0
@@ -99,7 +99,7 @@ font_size 14.0
 
 #:     narrow_symbols codepoints [optionally the number of cells]
 
-# disable_ligatures never
+disable_ligatures cursor 
 
 #: Choose how you want to handle multi-character ligatures. The
 #: default is to always render them. You can tell kitty to not render
@@ -159,7 +159,10 @@ font_size 14.0
 
 #: Enable alternate zero and oldstyle numerals::
 
-    font_features FiraCodeNerdFontComplete-Regular +zero +onum
+    # font_features FiraCodeNerdFontComplete-Regular +zero +onum
+    font_features FisaCodeLight-Italic +zero +onum
+    font_features FisaCodeBook-Regular +zero +onum
+
 
 #: Enable only alternate zero in the bold font::
 
@@ -183,7 +186,7 @@ font_size 14.0
 #: arrive at a pixel value. There must be four values corresponding to
 #: thin, normal, thick, and very thick lines.
 
-#: 
+#:
 
 #: Cursor customization {{{
 
