updated kitty font ligatures

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -160,8 +160,8 @@ disable_ligatures cursor
 #: Enable alternate zero and oldstyle numerals::
 
     # font_features FiraCodeNerdFontComplete-Regular +zero +onum
-    font_features FisaCodeLight-Italic +zero +onum
-    font_features FisaCodeBook-Regular +zero +onum
+    font_features FisaCodeLight-Italic +cv12 +ss05 +cv06 +cv30 +ss03
+    font_features FisaCodeBook-Regular +cv12 +ss05 +cv06 +cv30 +ss03
 
 
 #: Enable only alternate zero in the bold font::
