--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -65,7 +65,7 @@ threshold = 80
 
 # Prompt: optional param 1
 [time]
-disabled = false
+disabled = true
 format = " 🕙 $time($style)\n"
 style = "bright-white"
 time_format = "%T"
