--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -91,12 +91,12 @@ exec_always --no-startup-id sleep 10 && hideIt.sh --name 'Polybar tray window' -
 # hide/unhide i3status bar
 # bindsym $super+m bar mode toggle
 # start rofi (a program launcher) change modus Ctrl + Tab
-bindsym $super+d exec rofi -show run
+bindsym $super+d exec rofi -show drun
 bindsym $super+e exec rofi -show emoji
 bindsym $super+$alt+c exec rofi -show calc
 
 # Garuda Linux install
-bindsym $super+i exec sudo -E calamares
+# bindsym $super+i exec sudo -E calamares
 
 # Lock screen
 bindsym $super+Shift+l lock -i $lockScreenWallpaper
