git crypt stuff

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
 .gitattributes !filter !diff
 calendars/.config/khal/config filter=git-crypt diff=git-crypt
 calendars/.config/vdirsyncer/config filter=git-crypt diff=git-crypt
-
+calendars/.config/vdirsyncer/tokens filter=git-crypt diff=git-crypt
