did some stuff to remove some stuff

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@ mpd/.config/mpd/mpd.pid
 mpd/.config/mpd/mpd_state
 mpd/.config/mpd/sticker.sql
 **/.env
-
+calendars/.config/vdirsyncer/tokens
+calendars/.config/vdirsyncer/status/*
