--- a/terminals/.config/kitty/kitty.conf
+++ b/terminals/.config/kitty/kitty.conf
@@ -476,7 +476,7 @@ cursor_stop_blinking_after 0
 
 #: Click the link under the mouse or move the cursor
 
-# mouse_map left click ungrabbed mouse_handle_click selection link prompt
+mouse_map left click grabbed,ungrabbed mouse_handle_click selection link prompt
 
 #::  First check for a selection and if one exists do nothing. Then
 #::  check for a link under the mouse cursor and if one exists, click
@@ -1282,7 +1282,7 @@ background_opacity 0.79
 #: special value of ask means that kitty will ask before opening the
 #: link when clicked.
 
-# shell_integration enabled
+shell_integration enabled
 
 #: Enable shell integration on supported shells. This enables features
 #: such as jumping to previous prompts, browsing the output of the
