picom updated config

--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -189,7 +189,9 @@ active-opacity = 1.0;
 focus-exclude = [
   "class_g = 'Cairo-clock'",
   "class_g = 'Bar'",                    # lemonbar
-  "class_g = 'slop'"                    # maim
+  "class_g = 'slop'",                    # maim
+  "class_g = 'brave-browser'",
+  "role = 'browser'"
 ];
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
@@ -258,12 +260,12 @@ opacity-rule = [
 
 blur: {
   # requires: https://github.com/ibhagwan/picom
-  method = "kawase";
-  #method = "kernel";
-  strength = 7;
+  method = "dual_kawase";
+  # method = "gaussi";
+  strength = 5;
   # deviation = 1.0;
-  kernel = "11x11gaussian";
-  background = false;
+  kernel = "7x7gaussian";
+  background = true;
   background-frame = false;
   background-fixed = false;
   kern = "3x3box";
