--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -69,6 +69,7 @@ exec_always --no-startup-id autotiling
 # exec --no-startup-id conky
 # exec --no-startup-id conky -c ~/.config/conky/conky-shcts
 exec --no-startup-id ~/myConky/conky_start.sh
+exec --no-startup-id ~/myConky/assignments_start.sh
 exec --no-startup-id copyq
 exec --no-startup-id dunst
 exec --no-startup-id dex -a -s /etc/xdg/autostart/:~/.config/autostart/
