--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -64,7 +64,7 @@ exec --no-startup-id /usr/bin/picom --experimental-backends &
 # exec --no-startup-id ~/.fehbg &
 exec --no-startup-id /usr/bin/superpaper &
 
-#exec --no-startup-id pasystray
+exec --no-startup-id pasystray
 exec_always --no-startup-id autotiling
 # exec --no-startup-id conky
 # exec --no-startup-id conky -c ~/.config/conky/conky-shcts
