--- a/terminals/.config/kitty/kitty.conf
+++ b/terminals/.config/kitty/kitty.conf
@@ -2,7 +2,8 @@
 # vim:ft=kitty
 # include Nord.conf
 # include Sweetified.conf
-include Amarena.conf
+# include Amarena.conf
+include One Dark.conf
 #: Fonts
 
 #: kitty has very powerful font management. You can configure
