--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -188,8 +188,16 @@ bindm = $mainMod, mouse:273, resizewindow
 
 bind = $mainMod, x, exec, killall -SIGUSR1 waybar
 bind = $mainMod SHIFT, S, exec, grimblast --notify copysave area
-binde=, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
 
-# Example volume button that will activate even while an input inhibitor is active
-bindl=, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+# Media Buttons
+binde =, XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
+binde =, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
+bind =, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bind =, XF86AudioNext, exec, playerctl next
+bind =, XF86AudioPrev, exec, playerctl previous
+bind =, XF86AudioPlay, exec, playerctl play-pause
+bind =, XF86AudioStop, exec, playerctl stop
 
+# Screen Brightness
+binde =, XF86MonBrightnessUp, exec, brightnessctl s 5%+
+binde =, XF86MonBrightnessDown, exec, brightnessctl s 5%-
