--- a/terminals/.config/kitty/kitty.conf
+++ b/terminals/.config/kitty/kitty.conf
@@ -3,7 +3,8 @@
 # include Nord.conf
 # include Sweetified.conf
 # include Amarena.conf
-include One Dark.conf
+# include One Dark.conf
+include Tokyo Night.conf
 #: Fonts
 
 #: kitty has very powerful font management. You can configure
