updated hyprland co[29~nfuig]

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -19,8 +19,8 @@ monitor=HDMI-A-1,transform,1
 exec-once = dex -a
 exec-once = ~/.local/bin/launch-waybar
 exec-once = /usr/bin/polkit-dumb-agent
-exec-once = /usr/bin/hyprpaper
-
+exec-once = ~/.local/bin/wallpaper-changer -m "eDP-1" -i 300
+exec-once = ~/.local/bin/import-gsettings
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
 
@@ -45,10 +45,10 @@ input {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 2
+    gaps_in = 1
     gaps_out = 5
-    border_size = 2
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    border_size = 3
+    col.active_border = rgba(7dcfffff) rgba(bb9af7ff) 45deg
     col.inactive_border = rgba(595959aa)
     apply_sens_to_raw=0
     layout = dwindle
