--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -21,6 +21,7 @@ exec-once = ~/.local/bin/launch-waybar
 exec-once = /usr/bin/polkit-dumb-agent
 exec-once = ~/.local/bin/wallpaper-changer -m "eDP-1" -i 300
 exec-once = ~/.local/bin/import-gsettings
+exec-once = wl-paste --watch cliphist store
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
 
@@ -60,7 +61,7 @@ decoration {
     rounding = 10
     blur = yes
     blur_size = 3
-    blur_passes = 1
+    blur_passes = 3
     blur_new_optimizations = true
     drop_shadow = yes
     shadow_range = 4
@@ -202,3 +203,6 @@ bind =, XF86AudioStop, exec, playerctl stop
 # Screen Brightness
 binde =, XF86MonBrightnessUp, exec, brightnessctl s 5%+
 binde =, XF86MonBrightnessDown, exec, brightnessctl s 5%-
+
+# Clipboard
+bind = $mainMod, p, exec, cliphist list | wofi -d | cliphist decode | wl-copy
