updated to use rofi

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -125,8 +125,10 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, thunar
 bind = $mainMod, SPACE, togglefloating,
-bind = $mainMod, D, exec, wofi --show drun
-bind = $mainMod, P, pseudo, # dwindle
+bind = $mainMod, D, exec, rofi -show drun
+bind = $mainMod SHIFT, E, exec, rofi -show emoji
+bind = $mainMod, C, exec, rofi -show calc
+bind = $mainMod SHIFT, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen
 bind = $mainMod, B, exec,
@@ -205,4 +207,5 @@ binde =, XF86MonBrightnessUp, exec, brightnessctl s 5%+
 binde =, XF86MonBrightnessDown, exec, brightnessctl s 5%-
 
 # Clipboard
-bind = $mainMod, p, exec, cliphist list | wofi -d | cliphist decode | wl-copy
+
+bind = $mainMod, p, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
