updated hyprpaper config

--- a/hyprland/.config/hypr/hyprpaper.conf
+++ b/hyprland/.config/hypr/hyprpaper.conf
@@ -1,2 +1,3 @@
-preload = ~/Pictures/Wallpapers/current_blue_original.png
+preload = /home/arjun/Pictures/Wallpapers/current_blue_original.png
+
 wallpaper = eDP-1,~/Pictures/Wallpapers/current_blue_original.png
