--- a/music/.config/cava/config
+++ b/music/.config/cava/config
@@ -103,7 +103,7 @@ method = ncurses
 ; reverse = 0
 
 # Raw output target. A fifo will be created if target does not exist.
-; raw_target = /dev/stdout
+; raw_target = /tmp/cava.fifo
 
 # Raw data format. Can be 'binary' or 'ascii'.
 ; data_format = binary
@@ -204,3 +204,4 @@ noise_reduction = 0.8
 ; 3 = 1 # midtone
 ; 4 = 1
 ; 5 = 1 # treble
+
