--- a/bars/.config/waybar/config
+++ b/bars/.config/waybar/config
@@ -150,7 +150,7 @@
     "smooth-scrolling-threshold": 5, // This value was tested using a trackpad, it should be lowered if using a mouse.
     "on-scroll-up": "playerctl -p spotify next",
     "on-scroll-down": "playerctl -p spotify previous",
-    "exec": "$HOME/.config/waybar/scripts/music_bar.sh",
+    "exec": "echo 0 > /tmp/waybar_music_mode && $HOME/.config/waybar/scripts/music_bar.sh",
     "exec-if": "pgrep spotify || pgrep mpd"
   },
   /* "custom/keyboard-layout": {
