--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -194,9 +194,9 @@ bind = $mainMod, x, exec, killall -SIGUSR1 waybar
 bind = $mainMod SHIFT, S, exec, grimblast --notify copysave area
 
 # Media Buttons
-binde =, XF86AudioRaiseVolume, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ 0 && wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
-binde =, XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bind =, XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+binde =, XF86AudioRaiseVolume, exec, volume up
+binde =, XF86AudioLowerVolume, exec, volume down
+bind =, XF86AudioMute, exec, volume mute
 bind =, XF86AudioNext, exec, playerctl next
 bind =, XF86AudioPrev, exec, playerctl previous
 bind =, XF86AudioPlay, exec, playerctl play-pause
