--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -194,17 +194,17 @@ bind = $mainMod, x, exec, killall -SIGUSR1 waybar
 bind = $mainMod SHIFT, S, exec, grimblast --notify copysave area
 
 # Media Buttons
-binde =, XF86AudioRaiseVolume, exec, volume up
-binde =, XF86AudioLowerVolume, exec, volume down
-bind =, XF86AudioMute, exec, volume mute
+binde =, XF86AudioRaiseVolume, exec, ~/.local/bin/progress_notify.sh audio up
+binde =, XF86AudioLowerVolume, exec, ~/.local/bin/progress_notify.sh audio down
+bind =, XF86AudioMute, exec, ~/.local/bin/progress_notify.sh audio toggle
 bind =, XF86AudioNext, exec, playerctl next
 bind =, XF86AudioPrev, exec, playerctl previous
 bind =, XF86AudioPlay, exec, playerctl play-pause
 bind =, XF86AudioStop, exec, playerctl stop
 
 # Screen Brightness
-binde =, XF86MonBrightnessUp, exec, brightnessctl s 5%+
-binde =, XF86MonBrightnessDown, exec, brightnessctl s 5%-
+binde =, XF86MonBrightnessUp, exec, brightnessctl s 5%+ && ~/.local/bin/progress_notify.sh brightness
+binde =, XF86MonBrightnessDown, exec, brightnessctl s 5%- && ~/.local/bin/progress_notify.sh brightness
 
 # Clipboard
 
