--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-mpd/.config/mpd/log.log
-mpd/.config/mpd/mpd.pid
-mpd/.config/mpd/mpd_state
-mpd/.config/mpd/sticker.sql
+music/.config/mpd/log.log
+music/.config/mpd/mpd.pid
+music/.config/mpd/mpd_state
+music/.config/mpd/sticker.sql
 **/.env
 calendars/.config/vdirsyncer/tokens
 calendars/.config/vdirsyncer/status/*
