updated hyrland config

--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -108,13 +108,8 @@ device:epic mouse V1 {
 }
 
 # Example windowrule v1
-windowrule = float, ^(ulauncher)$
-windowrule = nomaxsize, ^(ulauncher)$
-# windowrule = size 500 500, ^(ulauncher)$
-# Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
@@ -205,7 +200,11 @@ bind =, XF86AudioStop, exec, playerctl stop
 # Screen Brightness
 binde =, XF86MonBrightnessUp, exec, brightnessctl s 5%+ && ~/.local/bin/progress_notify.sh brightness
 binde =, XF86MonBrightnessDown, exec, brightnessctl s 5%- && ~/.local/bin/progress_notify.sh brightness
+# Swaps the active workspaces between two monitors
+bind = $mainMod, Z, swapactiveworkspaces, HDMI-A-1 eDP-1
 
 # Clipboard
 
 bind = $mainMod, p, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
+
+windowrule = animation easeInBounce,kitty # sets the animation style for kitty
