--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -208,3 +208,4 @@ bind = $mainMod, Z, swapactiveworkspaces, HDMI-A-1 eDP-1
 bind = $mainMod, p, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 
 windowrule = animation easeInBounce,kitty # sets the animation style for kitty
+windowrule = opacity 0.85 0.85, VencordDesktop # sets the opacity for VencordDesktop
