--- a/bars/.config/eww/scripts/.env.example
+++ b/bars/.config/eww/scripts/.env.example
@@ -1,1 +1,5 @@
 PASSWORD=
+KEY=<openweather map api key>
+SP_DC=<check out https://github.com/akashrchandran/syrics/wiki/Finding-sp_dc>
+SPOTIPY_CLIENT_ID=
+SPOTIPY_CLIENT_SECRET=
