--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -120,7 +120,7 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, thunar
 bind = $mainMod, SPACE, togglefloating,
-bind = $mainMod, D, exec, rofi -show drun
+bind = $mainMod, D, exec, anyrun
 bind = $mainMod SHIFT, E, exec, rofi -show emoji
 bind = $mainMod, C, exec, rofi -show calc
 bind = $mainMod SHIFT, P, pseudo, # dwindle
