--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -209,3 +209,4 @@ bind = $mainMod, p, exec, cliphist list | rofi -dmenu | cliphist decode | wl-cop
 
 windowrule = animation easeInBounce,kitty # sets the animation style for kitty
 windowrule = opacity 0.85 0.85, VencordDesktop # sets the opacity for VencordDesktop
+windowrule = opacity 0.90 0.80, Code # sets the opacity for Code
