updated some terminal and themes

--- a/terminals/.config/kitty/kitty.conf
+++ b/terminals/.config/kitty/kitty.conf
@@ -4,7 +4,7 @@
 # include Sweetified.conf
 # include Amarena.conf
 # include One Dark.conf
-include Tokyo Night.conf
+include TokyoNightStorm.conf
 #: Fonts
 
 #: kitty has very powerful font management. You can configure
@@ -28,7 +28,7 @@ include Tokyo Night.conf
        font_family       Fisa Code Book Regular
        bold_font         Fisa Code Bold
        italic_font       Fisa Code Light Italic
-       bold_italic_font   Fisa Code Bold Italic
+       bold_italic_font  Fisa Code Bold Italic
 
 
 font_size 14.0
