--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -24,7 +24,7 @@ env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 
 
 $browser = /usr/bin/firedragon
-$terminal = /usr/bin/kitty
+$terminal = kitty
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=eDP-1,highres,auto,1
@@ -33,14 +33,14 @@ monitor=HDMI-A-1,transform,1
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = dex -a
-exec-once = ~/.local/bin/launch-waybar
-exec-once = /usr/bin/polkit-dumb-agent
-exec-once = ~/.local/bin/wallpaper-changer -m "eDP-1" -i 300
-exec-once = ~/.local/bin/import-gsettings
-exec-once = wl-paste --watch cliphist store
-exec-once = playerctld daemon
-exec-once = ~/.local/bin/import-gsettings
+#exec-once = dex -a
+#exec-once = ~/.local/bin/launch-waybar
+#exec-once = /usr/bin/polkit-dumb-agent
+#exec-once = ~/.local/bin/wallpaper-changer -m "eDP-1" -i 300
+#exec-once = ~/.local/bin/import-gsettings
+#exec-once = wl-paste --watch cliphist store
+#exec-once = playerctld daemon
+#exec-once = ~/.local/bin/import-gsettings
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
 
@@ -140,8 +140,8 @@ bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, thunar
 bind = $mainMod, SPACE, togglefloating,
 bind = $mainMod, D, exec, anyrun
-bind = $mainMod SHIFT, E, exec, rofi -show emoji
-bind = $mainMod, C, exec, rofi -show calc
+#bind = $mainMod SHIFT, E, exec, rofi -show emoji
+#bind = $mainMod, C, exec, rofi -show calc
 bind = $mainMod SHIFT, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen
@@ -208,23 +208,23 @@ bind = $mainMod, x, exec, killall -SIGUSR1 waybar
 bind = $mainMod SHIFT, S, exec, grimblast --notify copysave area
 
 # Media Buttons
-binde =, XF86AudioRaiseVolume, exec, ~/.local/bin/progress_notify.sh audio up
-binde =, XF86AudioLowerVolume, exec, ~/.local/bin/progress_notify.sh audio down
-bind =, XF86AudioMute, exec, ~/.local/bin/progress_notify.sh audio toggle
-bind =, XF86AudioNext, exec, playerctl next
-bind =, XF86AudioPrev, exec, playerctl previous
-bind =, XF86AudioPlay, exec, playerctl play-pause
-bind =, XF86AudioStop, exec, playerctl stop
+#binde =, XF86AudioRaiseVolume, exec, ~/.local/bin/progress_notify.sh audio up
+#binde =, XF86AudioLowerVolume, exec, ~/.local/bin/progress_notify.sh audio down
+#bind =, XF86AudioMute, exec, ~/.local/bin/progress_notify.sh audio toggle
+#bind =, XF86AudioNext, exec, playerctl next
+#bind =, XF86AudioPrev, exec, playerctl previous
+#bind =, XF86AudioPlay, exec, playerctl play-pause
+#bind =, XF86AudioStop, exec, playerctl stop
 
 # Screen Brightness
-binde =, XF86MonBrightnessUp, exec, brightnessctl s 5%+ && ~/.local/bin/progress_notify.sh brightness
-binde =, XF86MonBrightnessDown, exec, brightnessctl s 5%- && ~/.local/bin/progress_notify.sh brightness
+#binde =, XF86MonBrightnessUp, exec, brightnessctl s 5%+ && ~/.local/bin/progress_notify.sh brightness
+#binde =, XF86MonBrightnessDown, exec, brightnessctl s 5%- && ~/.local/bin/progress_notify.sh brightness
 # Swaps the active workspaces between two monitors
-bind = $mainMod, Z, swapactiveworkspaces, HDMI-A-1 eDP-1
+# bind = $mainMod, Z, swapactiveworkspaces, HDMI-A-1 eDP-1
 
 # Clipboard
 
-bind = $mainMod, p, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
+#bind = $mainMod, p, exec, cliphist list | rofi -dmenu | cliphist decode | wl-copy
 
 windowrule = animation easeInBounce,kitty # sets the animation style for kitty
 windowrule = opacity 0.85 0.85, VencordDesktop # sets the opacity for VencordDesktop
