--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -9,7 +9,7 @@
 env = WLR_NO_HARDWARE_CURSORS,1
 env = HYPRLAND_LOG_WLR,1
 env = XCURSOR_SIZE,24
-env = XCURSOR_THEME,Catpuccin-Mocha-Maroon
+# env = XCURSOR_THEME,Catpuccin-Mocha-Maroon-Cursors
 env = QT_QPA_PLATFORMTHEME,qt5ct
 env = QT_WAYLAND_DISABLE_WINDOWDECORATION,1
 env = _JAVA_AWT_WM_NONREPARENTING,1
@@ -22,8 +22,7 @@ env = XDG_SESSION_TYPE,wayland
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 
 
-
-$browser = /usr/bin/firedragon
+$browser = librewolf
 $terminal = kitty
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
@@ -33,13 +32,13 @@ monitor=HDMI-A-1,transform,1
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-#exec-once = dex -a
+exec-once = dex -a
 #exec-once = ~/.local/bin/launch-waybar
 #exec-once = /usr/bin/polkit-dumb-agent
-#exec-once = ~/.local/bin/wallpaper-changer -m "eDP-1" -i 300
+exec-once = ~/.local/bin/wallpaper-changer -m "eDP-1" -i 300
 #exec-once = ~/.local/bin/import-gsettings
-#exec-once = wl-paste --watch cliphist store
-#exec-once = playerctld daemon
+exec-once = wl-paste --watch cliphist store
+exec-once = playerctld daemon
 #exec-once = ~/.local/bin/import-gsettings
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -211,16 +210,16 @@ bind = $mainMod SHIFT, S, exec, grimblast --notify copysave area
 #binde =, XF86AudioRaiseVolume, exec, ~/.local/bin/progress_notify.sh audio up
 #binde =, XF86AudioLowerVolume, exec, ~/.local/bin/progress_notify.sh audio down
 #bind =, XF86AudioMute, exec, ~/.local/bin/progress_notify.sh audio toggle
-#bind =, XF86AudioNext, exec, playerctl next
-#bind =, XF86AudioPrev, exec, playerctl previous
-#bind =, XF86AudioPlay, exec, playerctl play-pause
-#bind =, XF86AudioStop, exec, playerctl stop
+bind =, XF86AudioNext, exec, playerctl next
+bind =, XF86AudioPrev, exec, playerctl previous
+bind =, XF86AudioPlay, exec, playerctl play-pause
+bind =, XF86AudioStop, exec, playerctl stop
 
 # Screen Brightness
 #binde =, XF86MonBrightnessUp, exec, brightnessctl s 5%+ && ~/.local/bin/progress_notify.sh brightness
 #binde =, XF86MonBrightnessDown, exec, brightnessctl s 5%- && ~/.local/bin/progress_notify.sh brightness
 # Swaps the active workspaces between two monitors
-# bind = $mainMod, Z, swapactiveworkspaces, HDMI-A-1 eDP-1
+bind = $mainMod, Z, swapactiveworkspaces, HDMI-A-1 eDP-1
 
 # Clipboard
 
