--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -39,6 +39,8 @@ exec-once = ~/.local/bin/wallpaper-changer -m "eDP-1" -i 300
 #exec-once = ~/.local/bin/import-gsettings
 exec-once = wl-paste --watch cliphist store
 exec-once = playerctld daemon
+exec-once = waybar &
+exec-once = wakapi -config ~/.config/wakapi/config.yml &
 #exec-once = ~/.local/bin/import-gsettings
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
@@ -77,14 +79,18 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
     rounding = 10
-    blur = yes
-    blur_size = 3
-    blur_passes = 3
-    blur_new_optimizations = true
     drop_shadow = yes
     shadow_range = 4
     shadow_render_power = 3
+
+    blur {
+      enabled = yes
+      size = 3
+      passes = 3
+      new_optimizations = true
+    }
     col.shadow = rgba(1a1a1aee)
+
 }
 
 animations {
