--- a/hyprland/.config/hypr/hyprland.conf
+++ b/hyprland/.config/hypr/hyprland.conf
@@ -41,6 +41,7 @@ exec-once = wl-paste --watch cliphist store
 exec-once = playerctld daemon
 exec-once = waybar &
 exec-once = wakapi -config ~/.config/wakapi/config.yml &
+exec-once = qbittorrent &
 #exec-once = ~/.local/bin/import-gsettings
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
